--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,4 @@
 {% extends "base.html" %} {% block content %}
-<h1>Home Page</h1>
-</div>
-</div>
-</header>
-
-<!-- Main Content -->
-<div class="container">
 <div class="row">
   <div class="col-lg-8 col-md-10 mx-auto">
     <div class="post-preview">
@@ -42,8 +35,8 @@
       <a href="post.html">
         <h2 class="post-title">Science has not yet mastered prophecy</h2>
         <h3 class="post-subtitle">
-          We predict too much for the next year and yet far too little for
-          the next ten.
+          We predict too much for the next year and yet far too little for the
+          next ten.
         </h3>
       </a>
       <p class="post-meta">
@@ -57,8 +50,8 @@
       <a href="post.html">
         <h2 class="post-title">Failure is not an option</h2>
         <h3 class="post-subtitle">
-          Many say exploration is part of our destiny, but it’s actually
-          our duty to future generations.
+          Many say exploration is part of our destiny, but it’s actually our
+          duty to future generations.
         </h3>
       </a>
       <p class="post-meta">
@@ -70,9 +63,7 @@
     <hr />
     <!-- Pager -->
     <div class="clearfix">
-      <a class="btn btn-primary float-right" href="#"
-        >Older Posts &rarr;</a
-      >
+      <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
     </div>
   </div>
 </div>
