--- a/templates/about.html
+++ b/templates/about.html
@@ -21,7 +21,7 @@
 
   <div class="col-md-7">
     <h3>
-      <a href="/about/{{ member.url }}">{{ loop.index }}. {{ member.name }}></a>
+      <a href="/about/{{ member.url }}">{{ loop.index }}. {{ member.name }}</a>
     </h3>
     <p>{{ member.description }}</p>
   </div>
@@ -44,7 +44,7 @@
   </div>
   <div class="col-md-7">
     <h3>
-      <a href="/about/{{ member.url }}">{{ loop.index }}. {{ member.name }}></a>
+      <a href="/about/{{ member.url }}">{{ loop.index }}. {{ member.name }}</a>
     </h3>
     <p>{{ member.description }}</p>
   </div>
